<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/mp_white_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnAddToCart"
            style="@style/MaterialBtnStyle.Button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btnAddToCart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnAddQty"
            app:layout_constraintStart_toStartOf="@+id/btnSubtractQty"
            app:layout_constraintTop_toBottomOf="@+id/tvQty" />

        <TextView
            android:id="@+id/tvQty"
            style="@style/TVFontStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/qtyText"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/btnSubtractQty"
            app:layout_constraintEnd_toStartOf="@+id/btnAddQty"
            app:layout_constraintStart_toEndOf="@+id/btnSubtractQty"
            app:layout_constraintTop_toTopOf="@+id/btnSubtractQty"
            tools:ignore="KeyboardInaccessibleWidget" />

        <ImageButton
            android:id="@+id/btnAddQty"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_end_corner_radius_button_ripple_background"
            android:contentDescription="@string/addSymbol"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tvPrice"
            app:layout_constraintTop_toTopOf="@+id/btnSubtractQty"
            app:srcCompat="@drawable/ic_baseline_add_24"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            app:tint="@color/mp_yellow" />

        <ImageButton
            android:id="@+id/btnSubtractQty"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_start_corner_radius_button_ripple_background"
            android:contentDescription="@string/subtractSymbol"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="@+id/tvPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice"
            app:srcCompat="@drawable/ic_baseline_remove_24"
            tools:ignore="TouchTargetSizeCheck"
            app:tint="@color/mp_yellow" />

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/viewAllProdCat"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_image_blue" />

        <TextView
            android:id="@+id/tvLabel"
            style="@style/TVFontStyle8"
            android:layout_width="0dp"
            android:text="@string/productName"
            app:layout_constraintEnd_toEndOf="@+id/imgProduct"
            app:layout_constraintStart_toStartOf="@+id/imgProduct"
            app:layout_constraintTop_toBottomOf="@+id/imgProduct"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvPrice"
            style="@style/TVFontStyle3"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/priceText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tvLabel"
            app:layout_constraintStart_toStartOf="@+id/tvLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvLabel"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>