<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1">

        <Button
            android:id="@+id/btnCancel"
            style="@style/MaterialBtnStyle.Button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnConfirm"
            style="@style/MaterialBtnStyle.Button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:focusable="false"
            android:text="@string/btnConfirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/TVFontStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/addProduct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TVFontStyle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enterProduct"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tvErrorCaption"
            style="@style/TVFontStyle5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/invalidName"
            android:textColor="@color/mp_red"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <EditText
            android:id="@+id/etName"
            style="@style/EditTextStyle1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_label_focused"
            android:hint="@string/productName"
            android:inputType="textPersonName|textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <MultiAutoCompleteTextView
            android:id="@+id/etImageLink"
            style="@style/EditTextStyle1"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_link_focused"
            android:hint="@string/imageLink"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minHeight="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <EditText
            android:id="@+id/etPrice"
            style="@style/EditTextStyle1"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_price_change_focused"
            android:hint="@string/priceText"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etImageLink" />

        <TextView
            android:id="@+id/tvDescriptions"
            style="@style/TVFontStyle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/noDescription"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btnManage"
            app:layout_constraintStart_toStartOf="@+id/etPrice"
            app:layout_constraintTop_toBottomOf="@+id/etPrice" />

        <TextView
            android:id="@+id/btnManage"
            style="@style/FlatButtonStyle3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnManage"
            app:layout_constraintBottom_toBottomOf="@+id/tvDescriptions"
            app:layout_constraintEnd_toEndOf="@+id/etPrice"
            app:layout_constraintTop_toTopOf="@+id/tvDescriptions" />

        <TextView
            android:id="@+id/tvCategories"
            style="@style/TVFontStyle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/noCategory"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btnManage"
            app:layout_constraintStart_toStartOf="@+id/tvDescriptions"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptions" />

        <TextView
            android:id="@+id/tvDeactivated"
            style="@style/TVFontStyle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/deactivated"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/switch1"
            app:layout_constraintEnd_toStartOf="@+id/btnManage"
            app:layout_constraintStart_toStartOf="@+id/tvCategories"
            app:layout_constraintTop_toTopOf="@+id/switch1" />

        <TextView
            android:id="@+id/btnManage2"
            style="@style/FlatButtonStyle3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnManage"
            app:layout_constraintBottom_toBottomOf="@+id/tvCategories"
            app:layout_constraintEnd_toEndOf="@+id/etPrice"
            app:layout_constraintTop_toTopOf="@+id/tvCategories" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnManage2"
            app:layout_constraintStart_toStartOf="@+id/btnManage2"
            app:layout_constraintTop_toBottomOf="@+id/btnManage2"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>